// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat connect should connect 1`] = `
Object {
  "_raw": "@color=#0D4200;display-name=dallas;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;turbo=0;user-id=1337;user-type=admin :tmi.twitch.tv GLOBALUSERSTATE",
  "channel": undefined,
  "command": "CONNECTED",
  "message": undefined,
  "tags": Object {
    "color": "#0D4200",
    "displayName": "dallas",
    "emoteSets": "0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239",
    "turbo": "0",
    "userId": "1337",
    "userType": "admin",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 1`] = `
Array [
  Array [
    "close",
  ],
  Array [
    "open",
  ],
  Array [
    "CAP REQ :twitch.tv/tags twitch.tv/commands twitch.tv/membership",
  ],
  Array [
    "PASS oauth:TOKEN",
  ],
  Array [
    "NICK USERNAME",
  ],
  Array [
    "JOIN #dallas",
  ],
]
`;

exports[`Chat reconnect should reconnect and rejoin channels 2`] = `
Array [
  Array [
    Object {
      "_raw": "@color=#0D4200;display-name=dallas;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;turbo=0;user-id=1337;user-type=admin :tmi.twitch.tv GLOBALUSERSTATE",
      "channel": undefined,
      "command": "GLOBALUSERSTATE",
      "isSelf": false,
      "message": undefined,
      "tags": Object {
        "color": "#0D4200",
        "displayName": "dallas",
        "emoteSets": Array [
          "0",
          "33",
          "50",
          "237",
          "793",
          "2126",
          "3517",
          "4578",
          "5569",
          "9400",
          "10337",
          "12239",
        ],
        "isTurboSubscriber": false,
        "turbo": "0",
        "userId": "1337",
        "userType": "admin",
        "username": "dallas",
      },
      "timestamp": 2018-01-01T00:00:00.000Z,
    },
  ],
  Array [
    Object {
      "_raw": "@color=#0D4200;display-name=dallas;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;turbo=0;user-id=1337;user-type=admin :tmi.twitch.tv GLOBALUSERSTATE",
      "channel": undefined,
      "command": "CONNECTED",
      "isSelf": false,
      "message": undefined,
      "tags": Object {
        "color": "#0D4200",
        "displayName": "dallas",
        "emoteSets": "0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239",
        "turbo": "0",
        "userId": "1337",
        "userType": "admin",
      },
      "timestamp": 2018-01-01T00:00:00.000Z,
    },
  ],
  Array [
    Object {
      "_raw": ":ronni!ronni@ronni.tmi.twitch.tv JOIN #dallas",
      "channel": "#dallas",
      "command": "JOIN",
      "isSelf": false,
      "message": undefined,
      "tags": Object {},
      "timestamp": 2018-01-01T00:00:00.000Z,
      "username": "ronni",
    },
  ],
  Array [
    Object {
      "_raw": "@broadcaster-lang=en;r9k=0;slow=0;subs-only=0 :tmi.twitch.tv ROOMSTATE #dallas",
      "channel": "#dallas",
      "command": "ROOMSTATE",
      "isSelf": false,
      "message": undefined,
      "tags": Object {
        "broadcasterLang": "en",
        "broadcasterLanguage": "en",
        "isEmoteOnly": false,
        "isFollowersOnly": false,
        "isR9kEnabled": false,
        "isSubscribersOnly": false,
        "r9k": "0",
        "slow": "0",
        "slowDelay": 0,
        "subsOnly": "0",
      },
      "timestamp": 2018-01-01T00:00:00.000Z,
    },
  ],
  Array [
    Object {
      "_raw": "@color=#0D4200;display-name=ronni;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;mod=1;subscriber=1;turbo=1;user-type=staff :tmi.twitch.tv USERSTATE #dallas",
      "channel": "#dallas",
      "command": "USERSTATE",
      "isSelf": true,
      "message": undefined,
      "tags": Object {
        "badges": Object {},
        "bits": undefined,
        "color": "#0D4200",
        "displayName": "ronni",
        "emoteSets": Array [
          "0",
          "33",
          "50",
          "237",
          "793",
          "2126",
          "3517",
          "4578",
          "5569",
          "9400",
          "10337",
          "12239",
        ],
        "emotes": Object {},
        "isModerator": true,
        "isSubGifter": false,
        "isSubscriber": true,
        "isTurboSubscriber": true,
        "mod": "1",
        "subscriber": "1",
        "turbo": "1",
        "userType": "staff",
      },
      "timestamp": 2018-01-01T00:00:00.000Z,
    },
  ],
]
`;

exports[`Chat should handle messages CLEARCHAT 1`] = `
Object {
  "_raw": ":tmi.twitch.tv CLEARCHAT #dallas",
  "channel": "#dallas",
  "command": "CLEARCHAT",
  "isSelf": false,
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages CLEARCHAT user with reason 1`] = `
Object {
  "_raw": "@ban-reason=Follow\\\\sthe\\\\srules :tmi.twitch.tv CLEARCHAT #dallas :ronni",
  "channel": "#dallas",
  "command": "CLEARCHAT",
  "event": "USER_BANNED",
  "isSelf": false,
  "tags": Object {
    "banDuration": undefined,
    "banReason": "Follow the rules",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "ronni",
}
`;

exports[`Chat should handle messages HOSTTARGET start 1`] = `
Object {
  "_raw": ":tmi.twitch.tv HOSTTARGET #ronni :dallas 123",
  "channel": "#ronni",
  "command": "HOSTTARGET",
  "event": "HOST_ON",
  "isSelf": false,
  "message": undefined,
  "numberOfViewers": 123,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "dallas",
}
`;

exports[`Chat should handle messages HOSTTARGET stop 1`] = `
Object {
  "_raw": ":tmi.twitch.tv HOSTTARGET #ronni :- 456",
  "channel": "#ronni",
  "command": "HOSTTARGET",
  "event": "HOST_OFF",
  "isSelf": false,
  "message": undefined,
  "numberOfViewers": 456,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "-",
}
`;

exports[`Chat should handle messages JOIN 1`] = `
Object {
  "_raw": ":ronni!ronni@ronni.tmi.twitch.tv JOIN #dallas",
  "channel": "#dallas",
  "command": "JOIN",
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "ronni",
}
`;

exports[`Chat should handle messages MODE another user +o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas +o ronni",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "ronni",
}
`;

exports[`Chat should handle messages MODE another user -o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas -o ronni",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_LOST",
  "isModerator": false,
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "ronni",
}
`;

exports[`Chat should handle messages MODE current user +o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas +o dallas",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "dallas",
}
`;

exports[`Chat should handle messages MODE current user -o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas -o dallas",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_LOST",
  "isModerator": false,
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "dallas",
}
`;

exports[`Chat should handle messages NAMES 1`] = `
Array [
  Object {
    "_raw": ":ronni.tmi.twitch.tv 353 ronni = #dallas :ronni fred wilma",
    "channel": "#dallas",
    "command": "353",
    "event": "353",
    "isSelf": false,
    "listType": "chatters",
    "message": undefined,
    "tags": Object {},
    "timestamp": 2018-01-01T00:00:00.000Z,
    "usernames": Array [
      "ronni",
      "fred",
      "wilma",
    ],
  },
  Object {
    "_raw": ":ronni.tmi.twitch.tv 353 ronni = #dallas :ronni fred wilma",
    "channel": "#dallas",
    "command": "353",
    "event": "353",
    "isSelf": false,
    "listType": "chatters",
    "message": undefined,
    "tags": Object {},
    "timestamp": 2018-01-01T00:00:00.000Z,
    "usernames": Array [
      "ronni",
      "fred",
      "wilma",
    ],
  },
  Object {
    "_raw": ":ronni.tmi.twitch.tv 366 ronni #dallas :End of /NAMES list",
    "channel": "#dallas",
    "command": "366",
    "event": "366",
    "isSelf": false,
    "message": "End of /NAMES list",
    "tags": Object {},
    "timestamp": 2018-01-01T00:00:00.000Z,
    "username": "ronni",
  },
]
`;

exports[`Chat should handle messages NOTICE ALREADY_BANNED 1`] = `
Object {
  "_raw": "@msg-id=already_banned :tmi.twitch.tv NOTICE #dallas :<user> is already banned in this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_BANNED",
  "isSelf": false,
  "message": "<user> is already banned in this channel.",
  "tags": Object {
    "msgId": "already_banned",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ALREADY_EMOTE_ONLY_OFF 1`] = `
Object {
  "_raw": "@msg-id=already_emote_only_off :tmi.twitch.tv NOTICE #dallas :This room is not in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_EMOTE_ONLY_OFF",
  "isSelf": false,
  "message": "This room is not in emote-only mode.",
  "tags": Object {
    "msgId": "already_emote_only_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ALREADY_EMOTE_ONLY_ON 1`] = `
Object {
  "_raw": "@msg-id=already_emote_only_on :tmi.twitch.tv NOTICE #dallas :This room is already in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_EMOTE_ONLY_ON",
  "isSelf": false,
  "message": "This room is already in emote-only mode.",
  "tags": Object {
    "msgId": "already_emote_only_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ALREADY_R9K_OFF 1`] = `
Object {
  "_raw": "@msg-id=already_r9k_off :tmi.twitch.tv NOTICE #dallas :This room is not in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_R9K_OFF",
  "isSelf": false,
  "message": "This room is not in r9k mode.",
  "tags": Object {
    "msgId": "already_r9k_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ALREADY_R9K_ON 1`] = `
Object {
  "_raw": "@msg-id=already_r9k_on :tmi.twitch.tv NOTICE #dallas :This room is already in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_R9K_ON",
  "isSelf": false,
  "message": "This room is already in r9k mode.",
  "tags": Object {
    "msgId": "already_r9k_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ALREADY_SUBS_OFF 1`] = `
Object {
  "_raw": "@msg-id=already_subs_off :tmi.twitch.tv NOTICE #dallas :This room is not in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_SUBS_OFF",
  "isSelf": false,
  "message": "This room is not in subscribers-only mode.",
  "tags": Object {
    "msgId": "already_subs_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ALREADY_SUBS_ON 1`] = `
Object {
  "_raw": "@msg-id=already_subs_on :tmi.twitch.tv NOTICE #dallas :This room is already in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_SUBS_ON",
  "isSelf": false,
  "message": "This room is already in subscribers-only mode.",
  "tags": Object {
    "msgId": "already_subs_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE AUTHENTICATION_FAILED 1`] = `
Object {
  "_raw": ":tmi.twitch.tv NOTICE * :Login authentication failed",
  "channel": "",
  "command": "NOTICE",
  "event": "AUTHENTICATION_FAILED",
  "isSelf": false,
  "message": "Login authentication failed",
  "tags": Object {
    "msgId": "AUTHENTICATION_FAILED",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE BAD_HOST_HOSTING 1`] = `
Object {
  "_raw": "@msg-id=bad_host_hosting :tmi.twitch.tv NOTICE #dallas :This channel is hosting <channel>.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "BAD_HOST_HOSTING",
  "isSelf": false,
  "message": "This channel is hosting <channel>.",
  "tags": Object {
    "msgId": "bad_host_hosting",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE BAD_UNBAN_NO_BAN 1`] = `
Object {
  "_raw": "@msg-id=bad_unban_no_ban :tmi.twitch.tv NOTICE #dallas :<user> is not banned from this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "BAD_UNBAN_NO_BAN",
  "isSelf": false,
  "message": "<user> is not banned from this channel.",
  "tags": Object {
    "msgId": "bad_unban_no_ban",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE BAN_SUCCESS 1`] = `
Object {
  "_raw": "@msg-id=ban_success :tmi.twitch.tv NOTICE #dallas :<user> is now banned from this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "BAN_SUCCESS",
  "isSelf": false,
  "message": "<user> is now banned from this channel.",
  "tags": Object {
    "msgId": "ban_success",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE EMOTE_ONLY_OFF 1`] = `
Object {
  "_raw": "@msg-id=emote_only_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "EMOTE_ONLY_OFF",
  "isSelf": false,
  "message": "This room is no longer in emote-only mode.",
  "tags": Object {
    "msgId": "emote_only_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE EMOTE_ONLY_ON 1`] = `
Object {
  "_raw": "@msg-id=emote_only_on :tmi.twitch.tv NOTICE #dallas :This room is now in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "EMOTE_ONLY_ON",
  "isSelf": false,
  "message": "This room is now in emote-only mode.",
  "tags": Object {
    "msgId": "emote_only_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE HOST_OFF 1`] = `
Object {
  "_raw": "@msg-id=host_off :tmi.twitch.tv NOTICE #dallas :Exited host mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "HOST_OFF",
  "isSelf": false,
  "message": "Exited host mode.",
  "tags": Object {
    "msgId": "host_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE HOST_ON 1`] = `
Object {
  "_raw": "@msg-id=host_on :tmi.twitch.tv NOTICE #dallas :Now hosting <channel>.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "HOST_ON",
  "isSelf": false,
  "message": "Now hosting <channel>.",
  "tags": Object {
    "msgId": "host_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE HOSTS_REMAINING 1`] = `
Object {
  "_raw": "@msg-id=hosts_remaining :tmi.twitch.tv NOTICE #dallas :There are <number> host commands remaining this half hour.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "HOSTS_REMAINING",
  "isSelf": false,
  "message": "There are <number> host commands remaining this half hour.",
  "tags": Object {
    "msgId": "hosts_remaining",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE MSG_CHANNEL_SUSPENDED 1`] = `
Object {
  "_raw": "@msg-id=msg_channel_suspended :tmi.twitch.tv NOTICE #dallas :This channel is suspended.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "MSG_CHANNEL_SUSPENDED",
  "isSelf": false,
  "message": "This channel is suspended.",
  "tags": Object {
    "msgId": "msg_channel_suspended",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE R9K_OFF 1`] = `
Object {
  "_raw": "@msg-id=r9k_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "R9K_OFF",
  "isSelf": false,
  "message": "This room is no longer in r9k mode.",
  "tags": Object {
    "msgId": "r9k_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE R9K_ON 1`] = `
Object {
  "_raw": "@msg-id=r9k_on :tmi.twitch.tv NOTICE #dallas :This room is now in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "R9K_ON",
  "isSelf": false,
  "message": "This room is now in r9k mode.",
  "tags": Object {
    "msgId": "r9k_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE ROOM_MODS 1`] = `
Object {
  "_raw": "@msg-id=room_mods :tmi.twitch.tv NOTICE #dallas :The moderators of this room are: dallas, ronni",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ROOM_MODS",
  "isSelf": false,
  "message": "The moderators of this room are: dallas, ronni",
  "mods": Array [
    "dallas",
    "ronni",
  ],
  "tags": Object {
    "msgId": "room_mods",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE SLOW_OFF 1`] = `
Object {
  "_raw": "@msg-id=slow_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in slow mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SLOW_OFF",
  "isSelf": false,
  "message": "This room is no longer in slow mode.",
  "tags": Object {
    "msgId": "slow_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE SLOW_ON 1`] = `
Object {
  "_raw": "@msg-id=slow_on :tmi.twitch.tv NOTICE #dallas :This room is now in slow mode. You may send messages every <slow seconds> seconds.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SLOW_ON",
  "isSelf": false,
  "message": "This room is now in slow mode. You may send messages every <slow seconds> seconds.",
  "tags": Object {
    "msgId": "slow_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE SUBS_OFF 1`] = `
Object {
  "_raw": "@msg-id=subs_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SUBS_OFF",
  "isSelf": false,
  "message": "This room is no longer in subscribers-only mode.",
  "tags": Object {
    "msgId": "subs_off",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE SUBS_ON 1`] = `
Object {
  "_raw": "@msg-id=subs_on :tmi.twitch.tv NOTICE #dallas :This room is now in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SUBS_ON",
  "isSelf": false,
  "message": "This room is now in subscribers-only mode.",
  "tags": Object {
    "msgId": "subs_on",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE TIMEOUT_SUCCESS 1`] = `
Object {
  "_raw": "@msg-id=timeout_success :tmi.twitch.tv NOTICE #dallas :<user> has been timed out for <duration> seconds.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "TIMEOUT_SUCCESS",
  "isSelf": false,
  "message": "<user> has been timed out for <duration> seconds.",
  "tags": Object {
    "msgId": "timeout_success",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE UNBAN_SUCCESS 1`] = `
Object {
  "_raw": "@msg-id=unban_success :tmi.twitch.tv NOTICE #dallas :<user> is no longer banned from this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "UNBAN_SUCCESS",
  "isSelf": false,
  "message": "<user> is no longer banned from this channel.",
  "tags": Object {
    "msgId": "unban_success",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages NOTICE UNRECOGNIZED_CMD 1`] = `
Object {
  "_raw": "@msg-id=unrecognized_cmd :tmi.twitch.tv NOTICE #dallas :Unrecognized command: <command>",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "UNRECOGNIZED_CMD",
  "isSelf": false,
  "message": "Unrecognized command: <command>",
  "tags": Object {
    "msgId": "unrecognized_cmd",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages PART 1`] = `
Object {
  "_raw": ":ronni!ronni@ronni.tmi.twitch.tv PART #dallas",
  "channel": "#dallas",
  "command": "PART",
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "ronni",
}
`;

exports[`Chat should handle messages PRIVMSG CHEER 1`] = `
Object {
  "_raw": "@badges=staff/1,bits/1000;bits=100;color=;display-name=dallas;emotes=;id=b34ccfc7-4977-403a-8a94-33c6bac34fb8;mod=0;room-id=1337;subscriber=0;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :ronni!ronni@ronni.tmi.twitch.tv PRIVMSG #dallas :cheer100",
  "bits": 100,
  "channel": "#dallas",
  "command": "PRIVMSG",
  "event": "CHEER",
  "isSelf": false,
  "message": "cheer100",
  "tags": Object {
    "badges": Object {
      "bits": 1000,
      "staff": 1,
    },
    "bits": 100,
    "color": true,
    "displayName": "dallas",
    "emoteSets": undefined,
    "emotes": Object {},
    "id": "b34ccfc7-4977-403a-8a94-33c6bac34fb8",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": false,
    "isTurboSubscriber": true,
    "mod": "0",
    "roomId": "1337",
    "subscriber": "0",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages PRIVMSG PRIVMSG 1`] = `
Object {
  "_raw": "@badges=global_mod/1,turbo/1;color=#0D4200;display-name=dallas;emotes=25:0-4,12-16/1902:6-10;id=b34ccfc7-4977-403a-8a94-33c6bac34fb8;mod=0;room-id=1337;subscriber=0;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=global_mod :ronni!ronni@ronni.tmi.twitch.tv PRIVMSG #dallas :Kappa Keepo Kappa",
  "channel": "#dallas",
  "command": "PRIVMSG",
  "isSelf": false,
  "message": "Kappa Keepo Kappa",
  "tags": Object {
    "badges": Object {
      "global_mod": 1,
      "turbo": 1,
    },
    "bits": undefined,
    "color": "#0D4200",
    "displayName": "dallas",
    "emoteSets": undefined,
    "emotes": Object {
      "1902": Object {
        "end": 10,
        "start": 6,
      },
      "25": Object {
        "end": 4,
        "start": 0,
      },
    },
    "id": "b34ccfc7-4977-403a-8a94-33c6bac34fb8",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": false,
    "isTurboSubscriber": true,
    "mod": "0",
    "roomId": "1337",
    "subscriber": "0",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "global_mod",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE RAID 1`] = `
Object {
  "_raw": "@badges=turbo/1;color=#9ACD32;display-name=TestChannel;emotes=;id=3d830f12-795c-447d-af3c-ea05e40fbddb;login=testchannel;mod=0;msg-id=raid;msg-param-displayName=TestChannel;msg-param-login=testchannel;msg-param-viewerCount=15;room-id=56379257;subscriber=0;system-msg=15\\\\sraiders\\\\sfrom\\\\sTestChannel\\\\shave\\\\sjoined\\\\n!;tmi-sent-ts=1507246572675;tmi-sent-ts=1507246572675;turbo=1;user-id=123456;user-type= :tmi.twitch.tv USERNOTICE #othertestchannel",
  "channel": "#othertestchannel",
  "command": "USERNOTICE",
  "event": "RAID",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "displayName": "TestChannel",
    "login": "testchannel",
    "viewerCount": 15,
  },
  "systemMessage": "15 raiders from TestChannel have joined !",
  "tags": Object {
    "badges": Object {
      "turbo": 1,
    },
    "bits": undefined,
    "color": "#9ACD32",
    "displayName": "TestChannel",
    "emoteSets": undefined,
    "emotes": Object {},
    "id": "3d830f12-795c-447d-af3c-ea05e40fbddb",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": false,
    "isTurboSubscriber": true,
    "login": "testchannel",
    "mod": "0",
    "msgId": "raid",
    "msgParamDisplayName": "TestChannel",
    "msgParamLogin": "testchannel",
    "msgParamViewerCount": "15",
    "roomId": "56379257",
    "subscriber": "0",
    "systemMsg": "15 raiders from TestChannel have joined !",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "123456",
    "userType": undefined,
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE RESUBSCRIPTION 1`] = `
Object {
  "_raw": "@badges=staff/1,broadcaster/1,turbo/1;color=#008000;display-name=ronni;emotes=;id=db25007f-7a18-43eb-9379-80131e44d633;login=ronni;mod=0;msg-id=resub;msg-param-months=6;msg-param-sub-plan=Prime;msg-param-sub-plan-name=Prime;room-id=1337;subscriber=1;system-msg=ronni\\\\shas\\\\ssubscribed\\\\sfor\\\\s6\\\\smonths!;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :tmi.twitch.tv USERNOTICE #dallas :Great stream -- keep it up!",
  "channel": "#dallas",
  "command": "USERNOTICE",
  "event": "RESUBSCRIPTION",
  "isSelf": false,
  "message": "Great stream -- keep it up!",
  "parameters": Object {
    "months": 6,
    "subPlan": "Prime",
    "subPlanName": "Prime",
  },
  "systemMessage": "ronni has subscribed for 6 months!",
  "tags": Object {
    "badges": Object {
      "broadcaster": 1,
      "staff": 1,
      "turbo": 1,
    },
    "bits": undefined,
    "color": "#008000",
    "displayName": "ronni",
    "emoteSets": undefined,
    "emotes": Object {},
    "id": "db25007f-7a18-43eb-9379-80131e44d633",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": true,
    "isTurboSubscriber": true,
    "login": "ronni",
    "mod": "0",
    "msgId": "resub",
    "msgParamMonths": "6",
    "msgParamSubPlan": "Prime",
    "msgParamSubPlanName": "Prime",
    "roomId": "1337",
    "subscriber": "1",
    "systemMsg": "ronni has subscribed for 6 months!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE RITUAL 1`] = `
Object {
  "_raw": "@badges=;color=;display-name=SevenTest1;emotes=30259:0-6;id=37feed0f-b9c7-4c3a-b475-21c6c6d21c3d;login=seventest1;mod=0;msg-id=ritual;msg-param-ritual-name=new_chatter;room-id=6316121;subscriber=0;system-msg=Seventoes\\\\sis\\\\snew\\\\shere!;tmi-sent-ts=1508363903826;turbo=0;user-id=131260580;user-type= :tmi.twitch.tv USERNOTICE #seventoes :HeyGuys",
  "channel": "#seventoes",
  "command": "USERNOTICE",
  "event": "RITUAL",
  "isSelf": false,
  "message": "HeyGuys",
  "parameters": Object {
    "ritualName": "new_chatter",
  },
  "systemMessage": "Seventoes is new here!",
  "tags": Object {
    "badges": Object {},
    "bits": undefined,
    "color": true,
    "displayName": "SevenTest1",
    "emoteSets": undefined,
    "emotes": Object {
      "30259": Object {
        "end": 6,
        "start": 0,
      },
    },
    "id": "37feed0f-b9c7-4c3a-b475-21c6c6d21c3d",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": false,
    "isTurboSubscriber": false,
    "login": "seventest1",
    "mod": "0",
    "msgId": "ritual",
    "msgParamRitualName": "new_chatter",
    "roomId": "6316121",
    "subscriber": "0",
    "systemMsg": "Seventoes is new here!",
    "tmiSentTs": "1508363903826",
    "turbo": "0",
    "userId": "131260580",
    "userType": undefined,
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE SUBMYSTERYGIFT 1`] = `
Object {
  "_raw": "@badges=subscriber/12,bits/5000,sub-gifter/1;color=;display-name=Nefarious_Ned;emotes=;id=761a4698-b867-4668-9658-c3844c7b8637;login=nefarious_ned;mod=0;msg-id=submysterygift;msg-param-mass-gift-count=5;msg-param-sender-count=37;msg-param-sub-plan=1000;room-id=73625408;subscriber=1;system-msg=Nefarious_Ned\\\\sis\\\\sgifting\\\\s5\\\\sTier\\\\s1\\\\sSubs\\\\sto\\\\sKate's\\\\scommunity!\\\\sThey've\\\\sgifted\\\\sa\\\\stotal\\\\sof\\\\s37\\\\sin\\\\sthe\\\\schannel!;tmi-sent-ts=1533875190783;turbo=0;user-id=109667930;user-type= :tmi.twitch.tv USERNOTICE #kate",
  "channel": "#kate",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION_GIFT_COMMUNITY",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "massGiftCount": 5,
    "senderCount": 37,
    "subPlan": "1000",
  },
  "systemMessage": "Nefarious_Ned is gifting 5 Tier 1 Subs to Kate's community! They've gifted a total of 37 in the channel!",
  "tags": Object {
    "badges": Object {
      "bits": 5000,
      "sub-gifter": 1,
      "subscriber": 12,
    },
    "bits": undefined,
    "color": true,
    "displayName": "Nefarious_Ned",
    "emoteSets": undefined,
    "emotes": Object {},
    "id": "761a4698-b867-4668-9658-c3844c7b8637",
    "isModerator": false,
    "isSubGifter": true,
    "isSubscriber": true,
    "isTurboSubscriber": false,
    "login": "nefarious_ned",
    "mod": "0",
    "msgId": "submysterygift",
    "msgParamMassGiftCount": "5",
    "msgParamSenderCount": "37",
    "msgParamSubPlan": "1000",
    "roomId": "73625408",
    "subscriber": "1",
    "systemMsg": "Nefarious_Ned is gifting 5 Tier 1 Subs to Kate's community! They've gifted a total of 37 in the channel!",
    "tmiSentTs": "1533875190783",
    "turbo": "0",
    "userId": "109667930",
    "userType": undefined,
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE SUBSCRIPTION 1`] = `
Object {
  "_raw": "@badges=staff/1,broadcaster/1,turbo/1;color=#008000;display-name=ronni;emotes=;id=db25007f-7a18-43eb-9379-80131e44d633;login=ronni;mod=0;msg-id=sub;msg-param-months=1;msg-param-sub-plan=Prime;msg-param-sub-plan-name=Prime;room-id=1337;subscriber=1;system-msg=ronni\\\\sjust\\\\ssubscribed\\\\swith\\\\sTwitch\\\\sPrime!;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :tmi.twitch.tv USERNOTICE #dallas :Great stream -- keep it up!",
  "channel": "#dallas",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION",
  "isSelf": false,
  "message": "Great stream -- keep it up!",
  "parameters": Object {
    "months": 1,
    "subPlan": "Prime",
    "subPlanName": "Prime",
  },
  "systemMessage": "ronni just subscribed with Twitch Prime!",
  "tags": Object {
    "badges": Object {
      "broadcaster": 1,
      "staff": 1,
      "turbo": 1,
    },
    "bits": undefined,
    "color": "#008000",
    "displayName": "ronni",
    "emoteSets": undefined,
    "emotes": Object {},
    "id": "db25007f-7a18-43eb-9379-80131e44d633",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": true,
    "isTurboSubscriber": true,
    "login": "ronni",
    "mod": "0",
    "msgId": "sub",
    "msgParamMonths": "1",
    "msgParamSubPlan": "Prime",
    "msgParamSubPlanName": "Prime",
    "roomId": "1337",
    "subscriber": "1",
    "systemMsg": "ronni just subscribed with Twitch Prime!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE SUBSCRIPTION_GIFT 1`] = `
Object {
  "_raw": "@badges=staff/1,premium/1;color=#0000FF;display-name=TWW2;emotes=;id=e9176cd8-5e22-4684-ad40-ce53c2561c5e;login=tww2;mod=0;msg-id=subgift;msg-param-months=1;msg-param-recipient-display-name=Mr_Woodchuck;msg-param-recipient-id=89614178;msg-param-recipient-name=mr_woodchuck;msg-param-sub-plan-name=House\\\\sof\\\\sNyoro~n;msg-param-sub-plan=1000;room-id=19571752;subscriber=0;system-msg=TWW2\\\\sgifted\\\\sa\\\\sTier\\\\s1\\\\ssub\\\\sto\\\\sMr_Woodchuck!;tmi-sent-ts=1521159445153;turbo=0;user-id=13405587;user-type=staff :tmi.twitch.tv USERNOTICE #forstycup",
  "channel": "#forstycup",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION_GIFT",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "months": 1,
    "recipientDisplayName": "Mr_Woodchuck",
    "recipientId": "89614178",
    "recipientName": "mr_woodchuck",
    "subPlan": "1000",
    "subPlanName": "House of Nyoro~n",
  },
  "systemMessage": "TWW2 gifted a Tier 1 sub to Mr_Woodchuck!",
  "tags": Object {
    "badges": Object {
      "premium": 1,
      "staff": 1,
    },
    "bits": undefined,
    "color": "#0000FF",
    "displayName": "TWW2",
    "emoteSets": undefined,
    "emotes": Object {},
    "id": "e9176cd8-5e22-4684-ad40-ce53c2561c5e",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": false,
    "isTurboSubscriber": false,
    "login": "tww2",
    "mod": "0",
    "msgId": "subgift",
    "msgParamMonths": "1",
    "msgParamRecipientDisplayName": "Mr_Woodchuck",
    "msgParamRecipientId": "89614178",
    "msgParamRecipientName": "mr_woodchuck",
    "msgParamSubPlan": "1000",
    "msgParamSubPlanName": "House\\\\sof\\\\sNyoro~n",
    "roomId": "19571752",
    "subscriber": "0",
    "systemMsg": "TWW2 gifted a Tier 1 sub to Mr_Woodchuck!",
    "tmiSentTs": "1521159445153",
    "turbo": "0",
    "userId": "13405587",
    "userType": "staff",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages USERNOTICE UNKNOWN 1`] = `
Object {
  "_raw": "@badges=;color=;display-name=SevenTest1;emotes=30259:0-6;id=37feed0f-b9c7-4c3a-b475-21c6c6d21c3d;login=seventest1;mod=0;msg-id=unknown;msg-param-unknown=value;room-id=6316121;subscriber=0;system-msg=Unknown\\\\ssystem\\\\smessage;tmi-sent-ts=1508363903826;turbo=0;user-id=131260580;user-type= :tmi.twitch.tv USERNOTICE #seventoes :Unknown USERNOTICE",
  "channel": "#seventoes",
  "command": "USERNOTICE",
  "event": "UNKNOWN",
  "isSelf": false,
  "message": "Unknown USERNOTICE",
  "parameters": Object {
    "unknown": "value",
  },
  "systemMessage": "Unknown system message",
  "tags": Object {
    "badges": Object {},
    "bits": undefined,
    "color": true,
    "displayName": "SevenTest1",
    "emoteSets": undefined,
    "emotes": Object {
      "30259": Object {
        "end": 6,
        "start": 0,
      },
    },
    "id": "37feed0f-b9c7-4c3a-b475-21c6c6d21c3d",
    "isModerator": false,
    "isSubGifter": false,
    "isSubscriber": false,
    "isTurboSubscriber": false,
    "login": "seventest1",
    "mod": "0",
    "msgId": "unknown",
    "msgParamUnknown": "value",
    "roomId": "6316121",
    "subscriber": "0",
    "systemMsg": "Unknown system message",
    "tmiSentTs": "1508363903826",
    "turbo": "0",
    "userId": "131260580",
    "userType": undefined,
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
}
`;

exports[`Chat should handle messages deviations CLEARCHAT deviation 1 1`] = `
Object {
  "_raw": "@ban-duration=600;room-id=19571641;target-user-id=200817980;tmi-sent-ts=1531857100477 :tmi.twitch.tv CLEARCHAT #ninja :aiibopz",
  "channel": "#ninja",
  "command": "CLEARCHAT",
  "event": "USER_BANNED",
  "isSelf": false,
  "tags": Object {
    "banDuration": 600,
    "banReason": undefined,
    "roomId": "19571641",
    "targetUserId": "200817980",
    "tmiSentTs": "1531857100477",
  },
  "timestamp": 2018-01-01T00:00:00.000Z,
  "username": "aiibopz",
}
`;

exports[`Chat should join channel 1`] = `
Object {
  "roomState": Object {
    "broadcasterLang": "en",
    "broadcasterLanguage": "en",
    "isEmoteOnly": false,
    "isFollowersOnly": false,
    "isR9kEnabled": false,
    "isSubscribersOnly": false,
    "r9k": "0",
    "slow": "0",
    "slowDelay": 0,
    "subsOnly": "0",
  },
  "userState": Object {
    "badges": Object {},
    "bits": undefined,
    "color": "#0D4200",
    "displayName": "ronni",
    "emoteSets": Array [
      "0",
      "33",
      "50",
      "237",
      "793",
      "2126",
      "3517",
      "4578",
      "5569",
      "9400",
      "10337",
      "12239",
    ],
    "emotes": Object {},
    "isModerator": true,
    "isSubGifter": false,
    "isSubscriber": true,
    "isTurboSubscriber": true,
    "mod": "1",
    "subscriber": "1",
    "turbo": "1",
    "userType": "staff",
  },
}
`;
